<resources>
    <string name="app_name">RecycleApp</string>
    <string name="can">カン</string>
    <string name="bin">ビン</string>
    <string name="pet">ペットボトル</string>
    <string name="notify">通知を発令</string>
    <string name="result">検索結果画面へ</string>
    <string name="set">設定</string>
    <string name="txt_by_bt">押したボタンの資源ゴミ回収日をテキスト表示(デバッグ用)</string>
    <string name="txt_can">カンは毎週水曜日に回収しています</string>
    <string name="txt_bin">ビンは毎週金曜日に回収しています</string>
    <string name="txt_pet">ペットボトルはどうなんでしょうか</string>
    <string name="selected_day_info">%1$d年%2$d月%3$d日%4$s曜日</string>
    <string name="target_info">%1$sの回収日です</string>
    <string name="no_target_info">資源ゴミの回収はありません</string>
    <string name="channel_name">通知チャネル</string>
    <string name="channel_description">通知チャネルディスクリプション</string>
    <string name="submit">出しました</string>
    <string name="forgot">忘れました</string>
    <string name="remind">再通知を設定</string>
    <string-array name="spinner_days">
        <item>当日</item>
        <item>前日</item>
        <item>前々日</item>
    </string-array>
    <string-array name="spinner_times">
        <item>6時</item>
        <item>9時</item>
        <item>12時</item>
        <item>15時</item>
        <item>18時</item>
        <item>21時</item>
    </string-array>
</resources>