<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 線を引くビューとカレンダービューを重ねるためのFrameLayout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 線を引いて無理矢理曜日をハイライトしてみます -->
        <View
            android:id="@+id/highlight_line"
            android:layout_width="35dp"
            android:layout_height="218dp"
            android:alpha="10"
            android:background="@color/purple_200"
            android:visibility="invisible" />

        <!-- CalendarViewを配置します。 -->
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <!-- 選択した日付の情報を表示するテキストビュー -->
    <TextView
        android:id="@+id/day_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/target_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <!-- ゴミの種類を選択するボタンを横並びに配置 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_can"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="clickHandlerFunction"
            android:text="@string/can" />

        <Button
            android:id="@+id/button_bin"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/bin" />

        <Button
            android:id="@+id/button_pet"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/pet" />

    </LinearLayout>

    <!-- ボタンで選択したゴミの回収曜日をテキスト表示(デバッグ用) -->
    <TextView
        android:id="@+id/text_by_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_by_bt" />

    <!-- 通知発令用ボタン -->
    <Button
        android:id="@+id/button_notify"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/notify" />

    <!-- 検索結果画面に飛ぶボタン -->

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="検索" />

    <!-- 通知日時設定周り -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/spinner_days"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/spinner_times"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_set"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/set" />
    </LinearLayout>

</LinearLayout>